--- a/page2.html
+++ b/page2.html
@@ -186,7 +186,7 @@
                             </div>
                             <div id="collapse1_22" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne">
                                 <div class="panel-body">
-                                    <p class="mbr-fonts-style panel-text display-7">真砂町<br>真砂本町<br>松原町<br>緑ヶ丘町<br>南郡元町<br>南新町<br>紫原 一丁目 〜 紫原 七丁目<br>牟礼岡 一丁目 〜 牟礼岡 三丁目<br>名山町<br>昭和 一丁目 〜 昭和 五丁目<br></p>
+                                    <p class="mbr-fonts-style panel-text display-7">真砂町<br>真砂本町<br>松原町<br>緑ヶ丘町<br>南郡元町<br>南新町<br>紫原 一丁目 〜 紫原 七丁目<br>牟礼岡 一丁目 〜 牟礼岡 三丁目<br>名山町<br>明和 一丁目 〜 明和 五丁目<br></p>
                                 </div>
                             </div>
                         </div>
